experiment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: pi-master
    http:
      paths:
      - backend:
          serviceName: webapp-svc
          servicePort: 8080
